# ESP32DevExperience

./: .gitignore  ESP32DevExperience.code-workspace  LICENSE  README.md  extra_script.py  platformio.ini  pytest.ini
.devcontainer/: Dockerfile  devcontainer.json
data/: wifi_portal.html
data/webui/: index.html  style.css
data/webui/bootstrap/: bootstrap.bundle.min.js  bootstrap.min.css
scripts/cert/: generate_cert.ps1
scripts/workload/: generate_cert.ps1  generate_cert.sh  install_workfload.sh  install_workload.ps1
src/: CMakeLists.txt  wifi_manager_example.cpp
tests/: test_crypto.cpp  test_esp32_pytest.py  test_wifi_config.cpp  test_wifi_manager.py  test_wifi_scan.cpp  test_wifi_scan.py
webui/: style.css
